<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group 
        android:id="@+id/group2">
        <item
        android:id="@+id/goto_rec"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/rec_goto"/>
        <item
        android:id="@+id/sub_save"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/save_fade"
        android:enabled="false"
        android:title="@string/sub_save"/>
        <item
        android:id="@+id/sub_save_as"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/sub_save_as"/>
    </group>

    <item
        android:id="@+id/sub_close"
        android:orderInCategory="11"
        android:showAsAction="never"
        android:title="@string/sub_close"/>

</menu>