<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_base_fade">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/def_background"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/tvPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_pos" />

        <SeekBar
            android:id="@+id/sbPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/goto_btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/goto_btn_go"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/go" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>