<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_base_fade" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/def_background"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/edit_tvnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/edit_tvtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_hh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <EditText
                    android:id="@+id/edt_mm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <EditText
                    android:id="@+id/edt_ss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="," />

                <EditText
                    android:id="@+id/edt_ms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_hh_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <EditText
                    android:id="@+id/edt_mm_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <EditText
                    android:id="@+id/edt_ss_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="," />

                <EditText
                    android:id="@+id/edt_ms_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="000" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_ettext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:linksClickable="false" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/edit_btn_cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".33"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/edit_btn_apply"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".33"
                    android:text="@string/apply" />

                <Button
                    android:id="@+id/edit_btn_next"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".34"
                    android:text="@string/next" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>